# MagicCatTalk-client

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
.lor/: config.yaml
.magic/: config.yaml
configs/: default.yaml
public/: index.html
src/: App.css  App.js
src/codeassistant/benchmark/: benchmark_code_review.py  compare.py
src/codeassistant/benchmark/tasks/: code_review.json
src/codeassistant/cli/: cli.py  main.py
src/codeassistant/cli/commands/: benchmark.py  chat.py  code_review.py  info.py  init.py  prompt.py  setup.py  train.py
src/codeassistant/inference/: _main.py  generate.py  inference_engine.py  loader.py  prompts.py
src/codeassistant/lora/: lora.py
src/codeassistant/training/: train.py
src/ui/: tui.py  ui.py
src/utils/: chat_store.py  codebase.py  config.py  files.py  logger.py  memory.py  tools.py
