[project]
name = "codeassistant"
version = "0.1.0"
requires-python = ">=3.12"

dependencies = [
    "torch==2.5.1+cu121",
    "torchvision==0.20.1+cu121",
    "torchaudio==2.5.1+cu121",
    "prompt-toolkit>=3.0.52",
    "rich==15.0.0",
    "accelerate==1.13.0",
    "annotated-doc==0.0.4",
    "anyio==4.13.0",
    "bitsandbytes==0.49.2",
    "certifi==2026.4.22",
    "click==8.3.3",
    "colorama==0.4.6",
    "filelock==3.29.0",
    "fsspec==2026.4.0",
    "h11==0.16.0",
    "hf-transfer==0.1.9",
    "hf-xet==1.4.3",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==1.13.0",
    "idna==3.13",
    "jinja2==3.1.6",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "mdurl==0.1.2",
    "mpmath==1.3.0",
    "networkx==3.6.1",
    "numpy==2.4.4",
    "packaging==26.2",
    "pillow==12.1.1",
    "psutil==7.2.2",
    "pygments==2.20.0",
    "pyyaml==6.0.3",
    "regex==2026.4.4",
    "safetensors==0.7.0",
    "setuptools==81.0.0",
    "shellingham==1.5.4",
    "sympy==1.13.1",
    "tokenizers==0.22.2",
    "tqdm==4.67.3",
    "transformers==5.8.0",
    "typer==0.25.1",
    "typing-extensions==4.15.0",
    "gitpython>=3.1.50",
    "rapidfuzz>=3.14.5",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
priority = 1

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
priority = 2

[project.scripts]
lor = "codeassistant.cli.main:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "black>=26.3.1",
]
