[project]
name = "codeassistant"
version = "0.1.0"
requires-python = ">=3.12"

dependencies = [
    "prompt-toolkit>=3.0.52",
    "rich==15.0.0",
    "huggingface-hub==1.13.0",
    "pyyaml==6.0.3",
    "transformers==5.8.0",
    "typer==0.25.1",
    "gitpython>=3.1.50",
    "rapidfuzz>=3.14.5",
    "requests>=2.34.2",
]

[project.scripts]
magic = "codeassistant.cli.main:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "deptry>=0.25.1",
]
